syntax = "proto3";

package journal;

option go_package = "/pkg/pb";

import "google/protobuf/timestamp.proto";

service TradeService {
  rpc CreateTrade(CreateTradeRequest) returns (CreateTradeResponse) {}
  rpc UpdateTrade(UpdateTradeRequest) returns (UpdateTradeResponse) {}
  rpc FindOneTrade(FindOneTradeRequest) returns (FindOneTradeResponse) {}
  rpc FindAllTrades(FindAllTradesRequest) returns (FindAllTradesResponse) {}
  rpc DeleteTrade(DeleteTradeRequest) returns (DeleteTradeResponse) {}
}

message CreateTradeRequest {
  string timeExecuted = 1;
  string market = 2;
  float stopLoss = 3;
  float entryPrice = 4;
  float exitPrice = 5;
  uint64 journal = 6;
  float quantity = 7;
  string outcome = 8;
  string direction = 9;
  string baseInstrument = 10;
  string quoteInstrument = 11;
  float takeProfit = 12;
  string comments = 13;
  string strategy = 14;
  string timeClosed = 15;
  google.protobuf.Timestamp createdAt = 16;
  string createdBy = 17;
}

message UpdateTradeRequest {
  uint64 id = 1;
  string timeExecuted = 2;
  string market = 3;
  float stopLoss = 4;
  float entryPrice = 5;
  float exitPrice = 6;
  uint64 journal = 7;
  float quantity = 8;
  string outcome = 9;
  string direction = 10;
  string baseInstrument = 11;
  string quoteInstrument = 12;
  float takeProfit = 13;
  string comments = 14;
  string strategy = 15;
  string timeClosed = 16;
  google.protobuf.Timestamp createdAt = 17;
  string createdBy = 18;
}

message FindOneTradeRequest {
  uint64 id = 1;
}

message FindAllTradesRequest {}

message DeleteTradeRequest {
  repeated string id = 1;
}

message CreateTradeResponse {
  string timestamp = 1;
  string level = 2;
  string message = 3;
  uint64 status = 4;
  Trade data = 5;
  string error = 6;
}

message UpdateTradeResponse {
  string timestamp = 1;
  string level = 2;
  string message = 3;
  uint64 status = 4;
  Trade data = 5;
  string error = 6;
}

message FindOneTradeResponse {
  uint64 status = 1;
  string error = 2;
  Trade data = 3;
}

message FindAllTradesResponse {
  uint64 status = 1;
  string error = 2;
  repeated Trade data = 3;
}

message DeleteTradeResponse {
  uint64 status = 1;
  string message = 2;
  string level = 3;
  string error = 4;
  uint64 rowsAffected = 5;
}

message Trade {
  uint64 id = 1;
  string timeExecuted = 2;
  string market = 3;
  float stopLoss = 4;
  float entryPrice = 5;
  float exitPrice = 6;
  uint64 journal = 7;
  float quantity = 8;
  string outcome = 9;
  string direction = 10;
  string baseInstrument = 11;
  string quoteInstrument = 12;
  float takeProfit = 13;
  string comments = 14;
  string strategy = 15;
  string timeClosed = 16;
  google.protobuf.Timestamp createdAt = 17;
  string createdBy = 18;
}
